6751923: JNDI wake up when clock_settime() is called

Ported Chris Phillips' patch from jdk5 to jdk7

Reviewed-by: chrisphi, coleenp